objects/Target_Hello_Object__c.object
<CustomObject   >
    <fields>
        <fullName>Email_Id__c</fullName>
        <label>Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test2__c</fullName>
        <label>Test2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Target Hello Object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>QueuDependentView</fullName>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <label>QueuDependentView</label>
        <language>en_US</language>
        <queue>TargetHelloQueu</queue>
    </listViews>
    <nameField>
        <label>Target Hello Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Target Hello Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>